--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                        <a href="#members" class="nav-link">Om oss</a>
                    </li>
                    <li class="nav-item">
-                       <a href="./blog.html" class="nav-link">Utveckling</a>
+                       <a href="./blog.html" class="nav-link">Utvecklingsblogg</a>
                    </li>
                </ul>
                <div class="nav-toggle" id="mobile-menu">
@@ -82,100 +82,91 @@
                    <!-- Member 1 -->
                    <div class="member-card left">
                        <div class="member-img">
-                           <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Ludvig Järvi">
+                           <img src="images/profile.png" alt="Anton Follinger">
                        </div>
                        <div class="member-info">
-                           <h3>Ludvig Järvi</h3>
+                           <h3>Anton Follinger</h3>
                            <p class="member-title">Projektledare</p>
-                           <p class="member-email"><a href="mailto:ludvig@example.com">ludvig@example.com</a></p>
-                           <p class="member-about">Jag är ansvarig för projektledning och ser till att teamet arbetar mot våra gemensamma mål. Jag gillar problemlösning och att skapa struktur i projekt.</p>
+                           <p class="member-about">yo</p>
                        </div>
                    </div>
                    <!-- Member 2 -->
                    <div class="member-card left">
                        <div class="member-img">
-                           <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Anna Svensson">
+                           <img src="images/profile.png" alt="Adrian Fingal">
                        </div>
                        <div class="member-info">
-                           <h3>Anna Svensson</h3>
-                           <p class="member-title">Utvecklare</p>
-                           <p class="member-email"><a href="mailto:anna@example.com">anna@example.com</a></p>
-                           <p class="member-about">Jag ansvarar för frontend-utveckling och design. Jag brinner för användarupplevelse och att skapa snygga, responsiva gränssnitt.</p>
+                           <h3>Adrian Fingal</h3>
+                           <p class="member-title">Integrationsingenjör</p>
+                           <p class="member-about">yo</p>
                        </div>
                    </div>
                    <!-- Member 3 -->
                    <div class="member-card left">
                        <div class="member-img">
-                           <img src="https://randomuser.me/api/portraits/men/64.jpg" alt="Erik Karlsson">
+                           <img src="images/profile.png" alt="Hugo Hedlund">
                        </div>
                        <div class="member-info">
-                           <h3>Erik Karlsson</h3>
-                           <p class="member-title">Backend & Databas</p>
-                           <p class="member-email"><a href="mailto:erik@example.com">erik@example.com</a></p>
-                           <p class="member-about">Jag jobbar med backend och databaslösningar. Jag gillar att optimera prestanda och säkerställa att allt fungerar smidigt bakom kulisserna.</p>
+                           <h3>Hugo Hedlund</h3>
+                           <p class="member-title">Integrationsingenjör</p>
+                           <p class="member-about">yo</p>
                        </div>
                    </div>
                     <!-- Member 4 -->
                    <div class="member-card left">
                        <div class="member-img">
-                           <img src="https://randomuser.me/api/portraits/men/64.jpg" alt="Erik Karlsson">
+                           <img src="images/profile.png" alt="Agvan Bedrosian">
                        </div>
                        <div class="member-info">
-                           <h3>Erik Karlsson</h3>
-                           <p class="member-title">Backend & Databas</p>
-                           <p class="member-email"><a href="mailto:erik@example.com">erik@example.com</a></p>
-                           <p class="member-about">Jag jobbar med backend och databaslösningar. Jag gillar att optimera prestanda och säkerställa att allt fungerar smidigt bakom kulisserna.</p>
+                           <h3>Agvan Bedrosian </h3>
+                           <p class="member-title">Testingenjör</p>
+                           <p class="member-about">yo</p>
                        </div>
                    </div>
                     <!-- Member 5 -->
                    <div class="member-card left">
                        <div class="member-img">
-                           <img src="https://randomuser.me/api/portraits/men/64.jpg" alt="Erik Karlsson">
+                           <img src="images/profile.png" alt="Mikolaj Marek Kaniecki">
                        </div>
                        <div class="member-info">
-                           <h3>Erik Karlsson</h3>
-                           <p class="member-title">Backend & Databas</p>
-                           <p class="member-email"><a href="mailto:erik@example.com">erik@example.com</a></p>
-                           <p class="member-about">Jag jobbar med backend och databaslösningar. Jag gillar att optimera prestanda och säkerställa att allt fungerar smidigt bakom kulisserna.</p>
+                           <h3>Mikolaj Marek Kaniecki</h3>
+                           <p class="member-title">R&D</p>
+                           <p class="member-about">yo</p>
                        </div>
                    </div>
                     <!-- Member 6 -->
                    <div class="member-card left">
                        <div class="member-img">
-                           <img src="https://randomuser.me/api/portraits/men/64.jpg" alt="Erik Karlsson">
+                           <img src="images/profile.png" alt="Santiago Tibaduiza">
                        </div>
                        <div class="member-info">
-                           <h3>Erik Karlsson</h3>
-                           <p class="member-title">Backend & Databas</p>
-                           <p class="member-email"><a href="mailto:erik@example.com">erik@example.com</a></p>
-                           <p class="member-about">Jag jobbar med backend och databaslösningar. Jag gillar att optimera prestanda och säkerställa att allt fungerar smidigt bakom kulisserna.</p>
+                           <h3>Santiago Tibaduiza</h3>
+                           <p class="member-title">Utvecklare</p>
+                           <p class="member-about">yo</p>
                        </div>
                    </div>
                     <!-- Member 7 -->
                    <div class="member-card left">
                        <div class="member-img">
-                           <img src="https://randomuser.me/api/portraits/men/64.jpg" alt="Erik Karlsson">
+                           <img src="images/profile.png" alt="Oscar Johansson">
                        </div>
                        <div class="member-info">
-                           <h3>Erik Karlsson</h3>
-                           <p class="member-title">Backend & Databas</p>
-                           <p class="member-email"><a href="mailto:erik@example.com">erik@example.com</a></p>
-                           <p class="member-about">Jag jobbar med backend och databaslösningar. Jag gillar att optimera prestanda och säkerställa att allt fungerar smidigt bakom kulisserna.</p>
+                           <h3>Oscar Johansson</h3>
+                           <p class="member-title">Utvecklare</p>
+                           <p class="member-about">yo</p>
                        </div>
                    </div>
                     <!-- Member 8 -->
                    <div class="member-card left">
                        <div class="member-img">
-                           <img src="https://randomuser.me/api/portraits/men/64.jpg" alt="Erik Karlsson">
+                           <img src="images/profile.png" alt="Ludvig Järvi">
                        </div>
                        <div class="member-info">
-                           <h3>Erik Karlsson</h3>
-                           <p class="member-title">Backend & Databas</p>
-                           <p class="member-email"><a href="mailto:erik@example.com">erik@example.com</a></p>
-                           <p class="member-about">Jag jobbar med backend och databaslösningar. Jag gillar att optimera prestanda och säkerställa att allt fungerar smidigt bakom kulisserna.</p>
+                           <h3>Ludvig Järvi</h3>
+                           <p class="member-title">Utvecklare</p>
+                           <p class="member-about">yo</p>
                        </div>
                    </div>
-                   <!-- Add more members as needed -->
                </div>
            </div>
        </section>
