--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
                        <p>This project represents our commitment to learning and applying cutting-edge web technologies in a practical, real-world context.</p>
                    </div>
                    <div class="about-features">
+                        <div class="feature">
+                           <h3>🔒 Integritet först</h3>
+                           <p>Designed with mobile users in mind</p>
+                       </div>
                        <div class="feature">
-                           <h3>🚀 Modern Design</h3>
+                           <h3>⛓️ Blockchain</h3>
                            <p>Clean, responsive interface that works on all devices</p>
                        </div>
                        <div class="feature">
                            <h3>⚡ Fast Performance</h3>
                            <p>Optimized for speed and efficiency</p>
-                       </div>
-                       <div class="feature">
-                           <h3>📱 Mobile First</h3>
-                           <p>Designed with mobile users in mind</p>
                        </div>
                    </div>
                </div>
