--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>iBoxen - Studentprojekt</title>
+   <title>PM3 - Studentprojekt</title>
    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
            <div class="nav-container">
                 <div class="nav-logo">
                     <a href="index.html">
-                        <h2>iBoxen</h2>
+                        <h2>PM3 Studentprojekt</h2>
                     </a>
                 </div>
                <ul class="nav-menu">
@@ -86,7 +86,7 @@
                        </div>
                        <div class="member-info">
                            <h3>Anton Follinger</h3>
-                           <p class="member-title">Projektledare</p>
+                           <p class="member-title">Project Manager</p>
                            <p class="member-about">yo</p>
                        </div>
                    </div>
@@ -97,7 +97,7 @@
                        </div>
                        <div class="member-info">
                            <h3>Adrian Fingal</h3>
-                           <p class="member-title">Integrationsingenjör</p>
+                           <p class="member-title">Integration Engineer</p>
                            <p class="member-about">yo</p>
                        </div>
                    </div>
@@ -108,7 +108,7 @@
                        </div>
                        <div class="member-info">
                            <h3>Hugo Hedlund</h3>
-                           <p class="member-title">Integrationsingenjör</p>
+                           <p class="member-title">Integration Engineer</p>
                            <p class="member-about">yo</p>
                        </div>
                    </div>
@@ -119,7 +119,7 @@
                        </div>
                        <div class="member-info">
                            <h3>Agvan Bedrosian </h3>
-                           <p class="member-title">Testingenjör</p>
+                           <p class="member-title">Test Engineer</p>
                            <p class="member-about">yo</p>
                        </div>
                    </div>
@@ -141,7 +141,7 @@
                        </div>
                        <div class="member-info">
                            <h3>Santiago Tibaduiza</h3>
-                           <p class="member-title">Utvecklare</p>
+                           <p class="member-title">Developer</p>
                            <p class="member-about">yo</p>
                        </div>
                    </div>
@@ -152,7 +152,7 @@
                        </div>
                        <div class="member-info">
                            <h3>Oscar Johansson</h3>
-                           <p class="member-title">Utvecklare</p>
+                           <p class="member-title">Developer</p>
                            <p class="member-about">yo</p>
                        </div>
                    </div>
@@ -163,7 +163,7 @@
                        </div>
                        <div class="member-info">
                            <h3>Ludvig Järvi</h3>
-                           <p class="member-title">Utvecklare</p>
+                           <p class="member-title">Developer</p>
                            <p class="member-about">yo</p>
                        </div>
                    </div>
