--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 				<div class="hero-content">
 					<h1>Utvecklingsblogg</h1>
 					<p>Följ vår resa vecka för vecka när vi bygger iBoxen!</p>
-					<button class="cta-button" onclick="window.location.href='https://github.com'">Besök vår GitHub</button>
+					<button class="cta-button" onclick="window.location.href='https://github.com/Jaevii/PM3.studentprojekt.io'">Besök vår GitHub</button>
 				</div>
 			</div>
 		</section>
