--- a/index.html
+++ b/index.html
@@ -54,9 +54,17 @@
                <h2>Om iBoxen</h2>
                <div class="about-content">
                    <div class="about-text">
-                       <p>iBoxen is an innovative student project that demonstrates modern web development practices. Our platform showcases the power of HTML, CSS, and JavaScript working together to create engaging user experiences.</p>
-                       <p>This project represents our commitment to learning and applying cutting-edge web technologies in a practical, real-world context.</p>
-                   </div>
+                       <p>Projektets mål är att skapa en digital logistikplattform för att minska svinn 
+                        och effektivisera leveranser på landsbygden. I projektets slut ska vi testa denna 
+                        plattform i en pilotstudie i Norrbotten. Plattformen ska utgå från decentraliserat 
+                        ägande med fokus på integriteten av de som skickar sina packet via plattformen. 
+                        Den ska även uppmuntra aktörer att agera korrekt, och motverka spårning och utnyttjande 
+                        av systemet. Koordinering mellan flera aktörer i systemet ska vara enkelt och automatiserat 
+                        för att undvika en byråkratisk struktur.</p>
+                       <div style="display: flex; justify-content: center;">
+                            <button class="cta-button" onclick="window.location.href='https://www.iboxen.se'">iBoxens hemsida</button>
+                        </div>
+                    </div>
                    <div class="about-features">
                         <div class="feature">
                            <h3>🔒 Integritet först</h3>
@@ -67,7 +75,7 @@
                            <p>Clean, responsive interface that works on all devices</p>
                        </div>
                        <div class="feature">
-                           <h3>⚡ Fast Performance</h3>
+                           <h3>🌳 Miljö</h3>
                            <p>Optimized for speed and efficiency</p>
                        </div>
                    </div>
@@ -78,93 +86,69 @@
        <section id="members" class="members">
            <div class="container">
                <h2>Vårt team</h2>
-               <div class="members-list">
+               <div class="members-grid">
                    <!-- Member 1 -->
-                   <div class="member-card left">
-                       <div class="member-img">
-                           <img src="images/profile.png" alt="Anton Follinger">
-                       </div>
+                   <div class="member-card">
+                       <div class="member-emoji" title="Project Manager">🗂️</div>
                        <div class="member-info">
                            <h3>Anton Follinger</h3>
                            <p class="member-title">Project Manager</p>
-                           <p class="member-about">yo</p>
                        </div>
                    </div>
                    <!-- Member 2 -->
-                   <div class="member-card left">
-                       <div class="member-img">
-                           <img src="images/profile.png" alt="Adrian Fingal">
-                       </div>
+                   <div class="member-card">
+                       <div class="member-emoji" title="Integration Engineer">🔗</div>
                        <div class="member-info">
                            <h3>Adrian Fingal</h3>
                            <p class="member-title">Integration Engineer</p>
-                           <p class="member-about">yo</p>
                        </div>
                    </div>
                    <!-- Member 3 -->
-                   <div class="member-card left">
-                       <div class="member-img">
-                           <img src="images/profile.png" alt="Hugo Hedlund">
-                       </div>
+                   <div class="member-card">
+                       <div class="member-emoji" title="Integration Engineer">🔗</div>
                        <div class="member-info">
                            <h3>Hugo Hedlund</h3>
                            <p class="member-title">Integration Engineer</p>
-                           <p class="member-about">yo</p>
                        </div>
                    </div>
-                    <!-- Member 4 -->
-                   <div class="member-card left">
-                       <div class="member-img">
-                           <img src="images/profile.png" alt="Agvan Bedrosian">
-                       </div>
+                   <!-- Member 4 -->
+                   <div class="member-card">
+                       <div class="member-emoji" title="Test Engineer">🧪</div>
                        <div class="member-info">
-                           <h3>Agvan Bedrosian </h3>
+                           <h3>Agvan Bedrosian</h3>
                            <p class="member-title">Test Engineer</p>
-                           <p class="member-about">yo</p>
                        </div>
                    </div>
-                    <!-- Member 5 -->
-                   <div class="member-card left">
-                       <div class="member-img">
-                           <img src="images/profile.png" alt="Mikolaj Marek Kaniecki">
-                       </div>
+                   <!-- Member 5 -->
+                   <div class="member-card">
+                       <div class="member-emoji" title="R&D">🔬</div>
                        <div class="member-info">
                            <h3>Mikolaj Marek Kaniecki</h3>
                            <p class="member-title">R&D</p>
-                           <p class="member-about">yo</p>
                        </div>
                    </div>
-                    <!-- Member 6 -->
-                   <div class="member-card left">
-                       <div class="member-img">
-                           <img src="images/profile.png" alt="Santiago Tibaduiza">
-                       </div>
+                   <!-- Member 6 -->
+                   <div class="member-card">
+                       <div class="member-emoji" title="Developer">💻</div>
                        <div class="member-info">
                            <h3>Santiago Tibaduiza</h3>
                            <p class="member-title">Developer</p>
-                           <p class="member-about">yo</p>
                        </div>
                    </div>
-                    <!-- Member 7 -->
-                   <div class="member-card left">
-                       <div class="member-img">
-                           <img src="images/profile.png" alt="Oscar Johansson">
-                       </div>
+                   <!-- Member 7 -->
+                   <div class="member-card">
+                       <div class="member-emoji" title="Developer">💻</div>
                        <div class="member-info">
                            <h3>Oscar Johansson</h3>
                            <p class="member-title">Developer</p>
-                           <p class="member-about">yo</p>
                        </div>
                    </div>
-                    <!-- Member 8 -->
-                   <div class="member-card left">
-                       <div class="member-img">
-                           <img src="images/profile.png" alt="Ludvig Järvi">
-                       </div>
+                   <!-- Member 8 -->
+                   <div class="member-card">
+                       <div class="member-emoji" title="Developer">💻</div>
                        <div class="member-info">
                            <h3>Ludvig Järvi</h3>
                            <p class="member-title">Developer</p>
-                           <p class="member-about">yo</p>
                        </div>
                    </div>
                </div>
