about and blog page update, first blog post

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>iBoxen Utvecklingsblogg</title>
+	<title>PM3 - Studentprojekt</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/blog.css">
 </head>
@@ -13,7 +13,7 @@
 			<div class="nav-container">
                 <div class="nav-logo">
                     <a href="index.html">
-                        <h2>iBoxen</h2>
+                        <h2>PM3 Studentprojekt</h2>
                     </a>
                 </div>
 				<ul class="nav-menu">
@@ -21,7 +21,7 @@
 						<a href="index.html#home" class="nav-link">Hem</a>
 					</li>
 					<li class="nav-item">
-						<a href="index.html#about" class="nav-link">iBoxen</a>
+						<a href="index.html#about" class="nav-link">Projektet</a>
 					</li>
 					<li class="nav-item">
 						<a href="index.html#members" class="nav-link">Om oss</a>
