--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                        <a href="#home" class="nav-link">Hem</a>
                    </li>
                    <li class="nav-item">
-                       <a href="#about" class="nav-link">iBoxen</a>
+                       <a href="#about" class="nav-link">Projektet</a>
                    </li>
                    <li class="nav-item">
                        <a href="#members" class="nav-link">Om oss</a>
@@ -51,32 +51,26 @@
 
        <section id="about" class="about">
            <div class="container">
-               <h2>Om iBoxen</h2>
+               <h2>Om projektet</h2>
                <div class="about-content">
                    <div class="about-text">
-                       <p>Projektets mål är att skapa en digital logistikplattform för att minska svinn 
-                        och effektivisera leveranser på landsbygden. I projektets slut ska vi testa denna 
-                        plattform i en pilotstudie i Norrbotten. Plattformen ska utgå från decentraliserat 
-                        ägande med fokus på integriteten av de som skickar sina packet via plattformen. 
-                        Den ska även uppmuntra aktörer att agera korrekt, och motverka spårning och utnyttjande 
-                        av systemet. Koordinering mellan flera aktörer i systemet ska vara enkelt och automatiserat 
-                        för att undvika en byråkratisk struktur.</p>
-                       <div style="display: flex; justify-content: center;">
-                            <button class="cta-button" onclick="window.location.href='https://www.iboxen.se'">iBoxens hemsida</button>
-                        </div>
+                       <p>Vi utvecklar en digital logistikplattform med fokus på hållbarhet, delaktighet och effektivitet. Plattformen ska underlätta transporter till och från landsbygden genom att minska svinn, förenkla koordinering och skapa incitament för aktörer att samarbeta på lika villkor.</p>
+                       <p>Målet är att bygga en så kallad överflödes-plattform, där anslutna aktörer kan se aktuella transportbehov och bidra med ledig kapacitet. Genom ett decentraliserat ägande främjas samägande, ansvarstagande och integritet - utan en central aktör som samlar in all information. På så sätt blir det attraktivt för både privatpersoner och företag att ansluta sig.</p>
+                       <p>Plattformen kommer att innehålla ett automatiserat omdömessystem som säkerställer tillit mellan aktörerna, utan att förlita sig på manuella interaktioner. Dessutom möjliggörs integration med olika transportörers befintliga digitala system, vilket gör det enkelt att delta utan att förändra egna rutiner.</p>
+                       <p>I slutet av projektet planerar vi att testa lösningen i en pilotstudie i Norrbotten, där plattformen kopplas till IBoxens obemannade paketboxar för att utvärdera hur systemet fungerar i praktiken.</p>
                     </div>
-                   <div class="about-features">
+                    <div class="about-features">
                         <div class="feature">
                            <h3>🔒 Integritet först</h3>
-                           <p>Designed with mobile users in mind</p>
+                           <p></p>
                        </div>
                        <div class="feature">
-                           <h3>⛓️ Blockchain</h3>
-                           <p>Clean, responsive interface that works on all devices</p>
+                           <h3>⛓️ Decentraliserat ägande</h3>
+                           <p></p>
                        </div>
                        <div class="feature">
-                           <h3>🌳 Miljö</h3>
-                           <p>Optimized for speed and efficiency</p>
+                           <h3>🌳 Effektiv logistik</h3>
+                           <p></p>
                        </div>
                    </div>
                </div>
