--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
        <section id="home" class="hero">
            <div class="hero-container">
                <div class="hero-content">
-                   <h1>Välkommen till iBoxen</h1>
-                   <p>En rikstäckande infrastruktur av leveransboxar i Sverige</p>
+                   <h1>Välkommen till PM3 Studentprojekt</h1>
+                   <p>Från överflöd till effektivitet – en ny plattform för decentraliserad logistikhantering.</p>
                    <button class="cta-button" onclick="scrollToSection('about')">Läs mer</button>
                </div>
            </div>
