replaced iBoxen with PM3

--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
 			<div class="hero-container">
 				<div class="hero-content">
 					<h1>Utvecklingsblogg</h1>
-					<p>Följ vår resa vecka för vecka när vi bygger iBoxen!</p>
+					<p>Följ vår resa vecka för vecka när vi bygger den nya PM3-plattformen!</p>
 					<button class="cta-button" onclick="window.location.href='https://github.com/Jaevii/PM3.studentprojekt.io'">Besök vår GitHub</button>
 				</div>
 			</div>
@@ -64,7 +64,7 @@
 
 	<footer>
 		<div class="container">
-			<p>&copy; 2025 iBoxen. A Student Project. All rights reserved.</p>
+			<p>&copy; 2025 PM3. A Student Project. All rights reserved.</p>
 		</div>
 	</footer>
 
