--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
    <footer>
        <div class="container">
-           <p>&copy; 2025 iBoxen. A Student Project. All rights reserved.</p>
+           <p>&copy; 2025 PM3. A Student Project. All rights reserved.</p>
        </div>
    </footer>
 
