--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/blog.css">
 </head>
-<body style="min-height:100vh;display:flex;flex-direction:column;">
+<body>
 	<header>
 		<nav class="navbar">
 			<div class="nav-container">
