--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
            <div class="hero-container">
                <div class="hero-content">
                    <h1>Välkommen till PM3 Studentprojekt</h1>
-                   <p>Från överflöd till effektivitet – en ny plattform för decentraliserad logistikhantering.</p>
+                   <p>Från överflöd till effektivitet - en ny plattform för decentraliserad logistikhantering.</p>
                    <button class="cta-button" onclick="scrollToSection('about')">Läs mer</button>
                </div>
            </div>
@@ -61,16 +61,16 @@
                     </div>
                     <div class="about-features">
                         <div class="feature">
-                           <h3>🔒 Integritet först</h3>
-                           <p></p>
+                           <h3>🔒 Integritet genom decentralisering</h3>
+                           <p>För att bevara alla aktörers anonymitet och trygghet i systemet används en decentraliserad struktur för informationshantering.</p>
                        </div>
                        <div class="feature">
-                           <h3>⛓️ Decentraliserat ägande</h3>
-                           <p></p>
+                           <h3>👍/👎 Omdömessystem</h3>
+                           <p>Kopplar verkligt beteende till det virtuella - skapar digital tillit som gör att negativt beteende får konsekvenser.</p>
                        </div>
                        <div class="feature">
-                           <h3>🌳 Effektiv logistik</h3>
-                           <p></p>
+                           <h3>🌳 Ekoeffektiv logistik</h3>
+                           <p>Genom att samordna befintliga transporter kan resurser användas smartare för att reducera dess miljöpåverkan.</p>
                        </div>
                    </div>
                </div>
