--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
        <section id="home" class="hero">
            <div class="hero-container">
                <div class="hero-content">
-                   <h1>Välkommen till PM3 Studentprojekt</h1>
+                   <h1>Fraktal / DistruBox / ?</h1>
                    <p>Från överflöd till effektivitet - en ny plattform för decentraliserad logistikhantering.</p>
                    <button class="cta-button" onclick="scrollToSection('about')">Läs mer</button>
                </div>
