updated nav bar

--- a/blog.html
+++ b/blog.html
@@ -9,35 +9,27 @@
 </head>
 <body style="min-height:100vh;display:flex;flex-direction:column;">
 	<header>
-		<nav class="navbar">
-			<div class="nav-container">
+       <nav class="navbar">
+           <div class="nav-container">
                 <div class="nav-logo">
                     <a href="index.html">
                         <h2>PM3 Studentprojekt</h2>
                     </a>
                 </div>
-				<ul class="nav-menu">
-					<li class="nav-item">
-						<a href="index.html#home" class="nav-link">Hem</a>
-					</li>
-					<li class="nav-item">
-						<a href="index.html#about" class="nav-link">Projektet</a>
-					</li>
-					<li class="nav-item">
-						<a href="index.html#members" class="nav-link">Om oss</a>
-					</li>
-					<li class="nav-item">
-						<a href="blog.html" class="nav-link active">Utvecklingsblogg</a>
-					</li>
-				</ul>
-				<div class="nav-toggle" id="mobile-menu">
-					<span class="bar"></span>
-					<span class="bar"></span>
-					<span class="bar"></span>
-				</div>
-			</div>
-		</nav>
-	</header>
+               <ul class="nav-menu">
+                   <a href="index.html#home" class="nav-item nav-bar-link">Hem</a>
+                   <a href="index.html#about" class="nav-item nav-bar-link">Projektet</a>
+                   <a href="index.html#members" class="nav-item nav-bar-link">Om oss</a>
+                   <a href="./blog.html" class="nav-item nav-bar-link">Utvecklingsblogg</a>
+               </ul>
+               <div class="nav-toggle" id="mobile-menu">
+                   <span class="bar"></span>
+                   <span class="bar"></span>
+                   <span class="bar"></span>
+               </div>
+           </div>
+       </nav>
+   </header>
 
 	<main style="flex:1 0 auto;display:flex;flex-direction:column;">
 		<section class="blog-hero">
