--- a/index.html
+++ b/index.html
@@ -16,18 +16,10 @@
                     </a>
                 </div>
                <ul class="nav-menu">
-                   <li class="nav-item">
-                       <a href="#home" class="nav-link">Hem</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="#about" class="nav-link">Projektet</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="#members" class="nav-link">Om oss</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./blog.html" class="nav-link">Utvecklingsblogg</a>
-                   </li>
+                   <a href="#home" class="nav-item nav-bar-link">Hem</a>
+                   <a href="#about" class="nav-item nav-bar-link">Projektet</a>
+                   <a href="#members" class="nav-item nav-bar-link">Om oss</a>
+                   <a href="./blog.html" class="nav-item nav-bar-link">Utvecklingsblogg</a>
                </ul>
                <div class="nav-toggle" id="mobile-menu">
                    <span class="bar"></span>
