--- a/blog.html
+++ b/blog.html
@@ -31,8 +31,8 @@
        </nav>
    </header>
 
-	   <main style="flex:1 0 auto;display:flex;flex-direction:column;">
-		   <section class="blog-hero" style="padding-top:70px;">
+		<main style="flex:1 0 auto;display:flex;flex-direction:column;padding-top:50px;">
+		<section class="blog-hero">
 			<div class="hero-container">
 				<div class="hero-content">
 					<h1>Utvecklingsblogg</h1>
