--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <nav class="navbar">
            <div class="nav-container">
                 <div class="nav-logo">
-                    <a href="index.html">
+                    <a href="#home">
                         <h2>PM3 Studentprojekt</h2>
                     </a>
                 </div>
@@ -66,6 +66,7 @@
                        </div>
                    </div>
                </div>
+               <div class="about-btn-center"><a class="cta-button" href="./project.html">Projektet i detalj</a></div>
            </div>
        </section>
 
