link to github instead of project page

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                        </div>
                    </div>
                </div>
-               <div class="about-btn-center"><a class="cta-button" href="./project.html">Projektet i detalj</a></div>
+               <div class="about-btn-center"><button class="cta-button" onclick="window.location.href='https://github.com/Jaevii/PM3.studentprojekt.io'">Besök vår GitHub</button></div>
            </div>
        </section>
 
