--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>PM3 - Studentprojekt</title>
+	<title>Fraktal - Studentprojekt</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/blog.css">
 </head>
@@ -13,7 +13,7 @@
            <div class="nav-container">
                 <div class="nav-logo">
                     <a href="index.html">
-                        <h2>PM3 Studentprojekt</h2>
+                        <h2>Fraktal - PM3</h2>
                     </a>
                 </div>
                <ul class="nav-menu">
@@ -35,7 +35,7 @@
 			<div class="hero-container">
 				<div class="hero-content">
 					<h1>Utvecklingsblogg</h1>
-					<p>Följ vår resa vecka för vecka när vi bygger den nya PM3-plattformen!</p>
+					<p>Följ vår resa vecka för vecka när vi bygger Fraktal!</p>
 					<button class="cta-button" onclick="window.location.href='https://github.com/Jaevii/PM3.studentprojekt.io'">Besök vår GitHub</button>
 				</div>
 			</div>
@@ -55,7 +55,7 @@
 
 	<footer>
 		<div class="container">
-			<p>&copy; 2025 PM3. A Student Project. All rights reserved.</p>
+			<p>2025 Fraktal. A Student Project. All rights reserved.</p>
 		</div>
 	</footer>
 
