--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>PM3 - Studentprojekt</title>
+   <title>Fraktal - Studentprojekt</title>
    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
            <div class="nav-container">
                 <div class="nav-logo">
                     <a href="#home">
-                        <h2>PM3 Studentprojekt</h2>
+                        <h2>Fraktal - PM3</h2>
                     </a>
                 </div>
                <ul class="nav-menu">
@@ -33,7 +33,7 @@
        <section id="home" class="hero">
            <div class="hero-container">
                <div class="hero-content">
-                   <h1>Fraktal / DistruBox / ?</h1>
+                   <h1>Fraktal</h1>
                    <p>Från överflöd till effektivitet - en ny plattform för decentraliserad logistikhantering.</p>
                    <button class="cta-button" onclick="scrollToSection('about')">Läs mer</button>
                </div>
@@ -144,7 +144,7 @@
 
    <footer>
        <div class="container">
-           <p>&copy; 2025 PM3. A Student Project. All rights reserved.</p>
+           <p>2025 Fraktal. A Student Project. All rights reserved.</p>
        </div>
    </footer>
 
