--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
 				<div class="hero-content">
 					<h1>Utvecklingsblogg</h1>
 					<p>Följ vår resa vecka för vecka när vi bygger Fraktal!</p>
-					<button class="cta-button" onclick="window.location.href='https://github.com/Jaevii/PM3.studentprojekt.io'">Besök vår GitHub</button>
+					<button class="cta-button" onclick="window.location.href='https://github.com/Fraktal-PM3/fraktal'">Besök vår GitHub</button>
 				</div>
 			</div>
 		</section>
