--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                        </div>
                    </div>
                </div>
-               <div class="about-btn-center"><button class="cta-button" onclick="window.location.href='https://github.com/Jaevii/PM3.studentprojekt.io'">Besök vår GitHub</button></div>
+               <div class="about-btn-center"><button class="cta-button" onclick="window.location.href='https://github.com/Fraktal-PM3/fraktal'">Besök vår GitHub</button></div>
            </div>
        </section>
 
