--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
            <div class="nav-container">
                 <div class="nav-logo">
                     <a href="index.html">
-                        <h2>Fraktal - PM3</h2>
+                        <h2>Fraktal</h2>
                     </a>
                 </div>
                <ul class="nav-menu">
@@ -36,7 +36,7 @@
 				<div class="hero-content">
 					<h1>Utvecklingsblogg</h1>
 					<p>Följ vår resa vecka för vecka när vi bygger Fraktal!</p>
-					<button class="cta-button" onclick="window.location.href='https://github.com/Fraktal-PM3/fraktal'">Besök vår GitHub</button>
+					<button class="cta-button" onclick="window.location.href='https://github.com/Fraktal-PM3'">Besök vår GitHub</button>
 				</div>
 			</div>
 		</section>
