--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
            <div class="nav-container">
                 <div class="nav-logo">
                     <a href="#home">
-                        <h2>Fraktal - PM3</h2>
+                        <h2>Fraktal</h2>
                     </a>
                 </div>
                <ul class="nav-menu">
@@ -65,7 +65,7 @@
                        </div>
                    </div>
                </div>
-               <div class="about-btn-center"><button class="cta-button" onclick="window.location.href='https://github.com/Fraktal-PM3/fraktal'">Besök vår GitHub</button></div>
+               <div class="about-btn-center"><button class="cta-button" onclick="window.location.href='https://github.com/Fraktal-PM3'">Besök vår GitHub</button></div>
            </div>
        </section>
 
